--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,11 @@
-@use 'mainBlock';
+@use'about';
 @use 'header';
+@use 'map';
+@use './fonts';
 
 *{
-	font-family: "Montserrat";
+	font-family: "Montserrat", sans-serif;
+	font-weight: 400;
 	margin: 0;
 	padding: 0;
 	color: rgb(220, 220, 220);
@@ -11,7 +14,7 @@
  
 body {
 	margin: 0;
-	background-color: #333;
+	background-color: #17171a;
 	-moz-osx-font-smoothing: grayscale;
 }
  
