--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,12 +1,61 @@
 .header{
 	padding: 1.5rem 0;
+	position: sticky;
+	top: 0;
+	color
+}
+
+.header::after{
+	content: "";
+	position: absolute;
+	background-color: #252528;
+	bottom: 0;
+	left: 50%;
+	height: 1px;
+	width: 90vw;
+	text-align: center;
+	transform: translateX(-50%);
+}
+
+.header__container{
+	margin: 0 auto;
+	max-width: 90vw;
 }
 
 .header__logo{
-	font-size: 2rem;
-	color: #fff;
+	font-size: 3rem;
+	background: linear-gradient(90deg, rgba(255,196,108,1), rgba(216,170,170,1), rgba(109,230,255,1), rgba(242,90,255,1));
+	-webkit-background-clip: text;
+  	-webkit-text-fill-color: transparent;
+  	color: #0B2349;
+	font-weight: bold;
+	word-spacing: -1px;
+	letter-spacing: -5px;
+	unicode-bidi:bidi-override;
+   direction:rtl;
+	background-size: 300%;
+	background-position: -100%;
+	animation: background 6s infinite alternate;
+}
+
+@keyframes background {
+	from {
+		background-position: 0%;
+	}
+	to{
+		background-position: 100%;
+	}
+}
+
+.header__logo span{
+	font-size: 3.5rem;
 	font-weight: bold;
 }
+
+.header__logo::first-letter{
+	letter-spacing: 0px;
+}
+
 
 .header__row{
 	display: flex;
@@ -17,16 +66,16 @@
 	display: flex;
 	align-items: center;
 }
- 
+
 .menu__item a{
 	text-decoration: none;
 	color: #fff;
 	transition: all .2s;
-	font-size: 1.1rem;
+	font-size: 1.5rem;
 }
  
 .menu__item a:hover{
-	color: rgb(255, 179, 91);
+	color: pink;
 }
  
 .menu__item:not(:last-child){
