--- a/src/styles/_static.scss
+++ b/src/styles/_static.scss
@@ -1,3 +1,15 @@
-$bg_block: #252528;
 $borderRadius: 10px;
 $fzTitle: 2.5rem;
+$activeLink: #d8aaaa;	
+
+:root.light{
+	--bg-block: rgb(220, 220, 220);
+	--bg-body: #fff;
+	--fc-main: #17171a;
+}
+
+:root.dark{
+	--bg-block: #252528;
+	--bg-body: #17171a;
+	--fc-main: rgb(220, 220, 220);
+}
