--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,24 +1,160 @@
-@use'about';
-@use 'header';
-@use 'map';
-@use './fonts';
+@import 'about';
+@import 'header';
+@import 'map';
+@import 'tasks';
+@import './fonts';
+@import './static';
 
 *{
 	font-family: "Montserrat", sans-serif;
 	font-weight: 400;
 	margin: 0;
 	padding: 0;
-	color: rgb(220, 220, 220);
+	color: var(--fc-main);
 	font-size: 14px;
+	transition: color 0.5s
 }
  
 body {
 	margin: 0;
-	background-color: #17171a;
+	background-color: var(--bg-body);
 	-moz-osx-font-smoothing: grayscale;
+	transition: background-color 0.5s
 }
+
+
  
 .container{
 	margin: 0 auto;
 	max-width: 50vw;
+}
+
+.active-link{
+	color: $activeLink;
+}
+
+.title{
+	text-align: center;
+	font-size: $fzTitle;
+	font-weight: bold;
+	margin-bottom: 30px;
+}
+
+.ol__item{
+	margin: 5px 0 0 2vw;
+	font-size: 1.2rem;
+}
+
+.change-theme__container{
+	position: relative;
+	height: 2rem;
+	width: 4rem;
+	background-color: var(--bg-block);
+	border-radius: 2rem;
+	transition: background-color 0.5s
+}
+
+.change-theme__item{
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 2rem;
+	width: 2rem;
+	background-color: var(--bg-block);
+	border-radius: 50%;
+	border: 1px solid var(--bg-body);
+	transition: all 0.5s
+}
+
+:root.light{
+	.change-theme__item{
+		transform: translatex(100%);
+	}
+}
+
+.change-theme__item img{
+	height: 1.5rem;
+	width: 1.5rem;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%)
+}
+
+
+.admin{
+	color: var(--fc-main);
+	font-size: 70px;
+	text-align: center;
+	margin-top: 20vh;
+	transform: translateY(-50%);
+}
+
+
+.btn{
+	text-decoration: none;
+	font-size: 1.5rem;
+	color: #333;
+	margin: 0 auto;
+	width: 10vw;
+	background: #6de6ff;
+	border: 1px solid #6de6ff;
+	border-radius: 20px;
+	padding: .5rem 1.5rem;
+	text-align: center;
+	display: block;
+}
+
+.box{
+	width: 300px;	
+	padding: 40px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	text-align: center;
+	transform: translate(-50%, -50%);
+}
+.box input[type = "text"],
+.box input[type = "password"]{
+	border: 0;
+	background: none;
+	margin: 20px auto;
+	padding: 14px 10px;
+	width: 200px;
+	text-align: center;
+	color: white;
+	border: 2px solid #3498db;
+	border-radius: 24px;
+	outline: none;
+	display: block;
+	transition: 0,25s;
+}
+.box {
+	color: white;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+.box input[type = "text"]:focus, .box input[type = "password"]:focus{
+	width: 280px;
+	border-color: #2ecc71;
+}
+.btn-log{
+	text-decoration: none;
+	border: 0;
+	background: none;
+	margin: 20px auto;
+	padding: 14px 40px;
+	text-align: center;
+	border: 2px solid #2ecc71;
+	outline: none;
+	color: white;
+	border-radius: 24px;
+	display: block;
+	transition: 0,25s;
+	cursor: pointer;
+	transition: all .5s;
+	cursor: pointer;
+}
+.btn-log:hover{
+	background:#2ecc71;
 }
