--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,10 @@
 	font-size: 14px;
 	transition: color 0.5s
 }
+
+ymaps{
+	color: #252528;
+}
  
 body {
 	margin: 0;
@@ -78,7 +82,12 @@ body {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translateX(-50%) translateY(-50%)
+	transform: translateX(-50%) translateY(-50%);
+	transition: all 0.5s;
+}
+
+:root.dark .change-theme__item img{
+	filter: invert(95%) sepia(1%) saturate(93%) hue-rotate(314deg) brightness(95%) contrast(91%);
 }
 
 
