--- a/src/styles/_tasks.scss
+++ b/src/styles/_tasks.scss
@@ -9,6 +9,11 @@
 	padding: 2rem;
 }
 
+.ol__item{
+	margin: 5px 0 0 2vw;
+	font-size: 1.2rem;
+}
+
 .points__title,
 .tasks__title{
 	font-size: 1.5rem;
