--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,8 +2,11 @@
 @import 'header';
 @import 'map';
 @import 'tasks';
-@import './fonts';
-@import './static';
+@import 'fonts';
+@import 'static';
+@import 'scroll';
+@import 'stats';
+@import 'sources';
 
 *{
 	font-family: "Montserrat", sans-serif;
@@ -44,52 +47,56 @@ body {
 	margin-bottom: 30px;
 }
 
-.ol__item{
-	margin: 5px 0 0 2vw;
-	font-size: 1.2rem;
-}
-
-.change-theme__container{
-	position: relative;
-	height: 2rem;
-	width: 4rem;
+.block{
+	padding-bottom: 75px;
+	border-radius: $borderRadius;
 	background-color: var(--bg-block);
-	border-radius: 2rem;
+	padding: 2rem;
 	transition: background-color 0.5s
 }
 
-.change-theme__item{
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 2rem;
-	width: 2rem;
-	background-color: var(--bg-block);
-	border-radius: 50%;
-	border: 1px solid var(--bg-body);
-	transition: all 0.5s
+.block:first-child{
+	margin-top: 105px;
 }
 
-:root.light{
-	.change-theme__item{
-		transform: translatex(100%);
-	}
+.block:not(:first-child){
+	margin-top: 20px;
+}
+
+.change-theme__container{
+	height: 40px;
+	width: 60px;
+	background: var(--bg-theme);
+	border-radius: 50px;
+	display: flex;
+	align-items: center;
+	padding: 0 5px;
+	justify-content: flex-start;
+}
+
+.change-theme__item{
+	position: relative;
+	height: 30px;
+	width: 30px;
+	border-radius: 50%;
+	background-color: #fff;
+	margin-left: 0px;
+}
+
+.change-theme__container[data-isOn="false"] {
+	justify-content: flex-end;
 }
 
 .change-theme__item img{
-	height: 1.5rem;
-	width: 1.5rem;
+	height: 1.3rem;
+	width: 1.3rem;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	transition: all 0.5s;
+	filter: invert(11%) sepia(7%) saturate(588%) hue-rotate(201deg) brightness(92%) contrast(88%);
 }
-
-:root.dark .change-theme__item img{
-	filter: invert(95%) sepia(1%) saturate(93%) hue-rotate(314deg) brightness(95%) contrast(91%);
-}
-
 
 .admin{
 	color: var(--fc-main);
