only not team-component

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,23 +1,35 @@
 @font-face {
 	font-family: 'Montserrat';
-	src: url(../fonts/Montserrat-Regular.eot);
+	src: url(../fonts/Montserrat/Montserrat-Regular.eot);
 	src: local('Montserrat'), local('Montserrat'),
-		url('../fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-Regular.woff') format('woff'),
-		url('../fonts/Montserrat-Regular.ttf') format('truetype'),
-		url('../fonts/Montserrat-Regular.otf') format('opentype');
+		url('../fonts/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Montserrat/Montserrat-Regular.woff') format('woff'),
+		url('../fonts/Montserrat/Montserrat-Regular.ttf') format('truetype'),
+		url('../fonts/Montserrat/Montserrat-Regular.otf') format('opentype');
 	font-weight: 400;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Montserrat';
-	src: url(../fonts/Montserrat-Bold.eot);
+	src: url(../fonts/Montserrat/Montserrat-Bold.eot);
 	src: local('Montserrat'), local('Montserrat'),
-		url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-Bold.woff') format('woff'),
-		url('../fonts/Montserrat-Bold.ttf') format('truetype'),
-		url('../fonts/Montserrat-Bold.otf') format('opentype');
+		url('../fonts/Montserrat/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Montserrat/Montserrat-Bold.woff') format('woff'),
+		url('../fonts/Montserrat/Montserrat-Bold.ttf') format('truetype'),
+		url('../fonts/Montserrat/Montserrat-Bold.otf') format('opentype');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Gropled-Bold';
+	src: url(../fonts/Gropled/Gropled-Bold.eot);
+	src: local('Gropled-Bold'), local('Gropled-Bold'),
+		url('../fonts/Gropled/Gropled-Bold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Gropled/Gropled-Bold.woff') format('woff'),
+		url('../fonts/Gropled/Gropled-Bold.ttf') format('truetype'),
+		url('../fonts/Gropled/Gropled-Bold.otf') format('opentype');
 	font-weight: 700;
 	font-style: normal;
 }
