--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,7 +9,7 @@
 @import 'sources';
 
 *{
-	font-family: "Montserrat", sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 400;
 	margin: 0;
 	padding: 0;
@@ -45,6 +45,7 @@ body {
 	font-size: $fzTitle;
 	font-weight: bold;
 	margin-bottom: 30px;
+	transition: color .5s;
 }
 
 .block{
@@ -52,7 +53,7 @@ body {
 	border-radius: $borderRadius;
 	background-color: var(--bg-block);
 	padding: 2rem;
-	transition: background-color 0.5s
+	transition: background-color .5s
 }
 
 .block:first-child{
