--- a/src/styles/_sources.scss
+++ b/src/styles/_sources.scss
@@ -1,11 +1,25 @@
 .sources__item{
 	text-align: center;
-	margin: 5px 0 10px 1.5vw;
+	margin: 5vh 0 10px 1.5vw;
 	font-size: 1.2rem;
+	position: relative;
+	&:not(:last-child)::after{
+		content: "";
+		position: absolute;
+		display: block;
+		background: var(--bg-afterSource);
+		width: 70%;
+		height: 1px;
+		left: 50%;
+		transform: translateX(-50%);
+		margin: 2vh 0 0 0;
+	}
 }
+
+
 
 .sources__item a{
 	font-size: 1.2rem;
 	text-decoration: none;
-	color: #d8aaaa;
+	color: var(--fc-links);
 }
