--- a/src/styles/_static.scss
+++ b/src/styles/_static.scss
@@ -8,6 +8,9 @@ $activeLink: #d8aaaa;
 	--fc-main: #17171a;
 	--scroll-track: #C8C8C8;
 	--bg-theme: linear-gradient(90deg, rgba(216,170,170,1) 0%, rgba(107,85,255,1) 100%);
+	--bg-afterSource: linear-gradient(90deg, rgba(23,23,26,0.0005) 0%, rgba(23,23,26,0.5) 50%, rgba(23,23,26,0.0005) 100%);
+	--fc-links: rgba(107,85,255,1);
+	--swiper-theme-color: rgba(107,85,255,1);
 }
 
 :root.dark{
@@ -16,4 +19,7 @@ $activeLink: #d8aaaa;
 	--fc-main: rgb(220, 220, 220);
 	--scroll-track: #252528;
 	--bg-theme: linear-gradient(90deg, rgba(216,170,170,1) 0%, rgba(107,85,255,1) 100%);
+	--bg-afterSource: linear-gradient(90deg, rgba(255,255,255,0.002) 0%, rgba(255,255,255,0.2) 50%, rgba(255,255,255,0.002) 100%);
+	--fc-links: rgba(216,170,170,1);
+	--swiper-theme-color: rgba(216,170,170,1);
 }
