--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,11 +2,11 @@
 @import 'fonts';
 
 .header{
-	padding: 1.5rem 0;
+	padding: 1rem 0;
 	position: sticky;
 	top: 0;
-	-webkit-backdrop-filter: blur(20px);
-  	backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(25px);
+  	backdrop-filter: blur(25px);
 	z-index: 5;
 }
 
@@ -35,7 +35,6 @@
   	-webkit-text-fill-color: transparent;
   	color: #0B2349;
 	font-weight: bold;
-	word-spacing: -1px;
 	letter-spacing: -5px;
 	unicode-bidi:isolate-override;
    direction:rtl;
@@ -55,7 +54,7 @@
 }
 
 .header__logo span{
-	font-size: 3.5rem;
+	font-size: 4.5rem;
 	font-weight: bold;
 }
 
@@ -82,7 +81,7 @@
 }
  
 .menu__link:hover{
-	color: #d8aaaa;
+	color: var(--fc-links);
 }
  
 .menu__item:not(:last-child){
