--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -27,7 +27,7 @@
 .logo{
 	font-family: 'Gropled', sans-serif;
 	font-size: 3rem;
-	background: linear-gradient(90deg, rgba(255,196,108,1), rgba(216,170,170,1), rgba(109,230,255,1), rgba(242,90,255,1));
+	background: var(--fc-logo);
 	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
   	color: #fff;
@@ -35,7 +35,7 @@
 	word-spacing: -15px;
 	background-size: 300%;
 	background-position: -100%;
-	animation: background 6s infinite alternate;
+	animation: background 10s infinite alternate;
 	text-decoration: none;
 	& span{
 		font-size: 4.5rem;
