--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,7 +20,7 @@ body {
 	margin: 0;
 	background-color: var(--bg-body);
 	-moz-osx-font-smoothing: grayscale;
-	transition: background-color 0.5s
+	transition: background-color 0.5s;
 }
 
 html, body {
